# studyAI

./: .gitignore  Agent.py  main.py
Tutorial/: .gitignore  dummy-agent.ipynb  pyproject.toml
basic_agent/: pyproject.toml
chatgpt-clone/: .env  .gitignore  chat-gpt-clone-memory.db  dummy-agent.ipynb  main.py
customer-support-agent/: MEDIUM_ARTICLE.md  customer-support-memory.db-shm  customer-support-memory.db-wal  main.py  models.py  pyproject.toml  workflow.py
customer-support-agent/my_agents/: account_agent.py  billing_agent.py  order_agent.py  output_guardrails.py  technical_agent.py  triage_agent.py
financial-analist/: .gitignore  README.md  main.py  pyproject.toml  tools.py
financial-analist/financial_advisor/: agent.py
news-summary/: main.py  news.py  news_nomade.py  news_report_20251112_041802.html  news_report_20251112_042944.html  news_report_20251114_080402.html  pyproject.toml  test.py
news-summary/config/: agents.yaml  tasks.yaml  translate_agents.yaml  translate_tasks.yaml
news-summary/description/: IMPLEMENTATION.md  README.md  WORKFLOW.md
news-summary/resources/: news_nomade참고.md
pipeline/: .gitignore  AI.py  basic.py  crewai_flow.html  main2.py  pyproject.toml
pipeline/chatgpt-clone/: ai-memory.db-shm  ai-memory.db-wal  mina2.py  pyproject.toml  test.txt
pipeline/customer-support-agent/: models.py  pyproject.toml
