[project]
name = "tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agent>=0.1.3",
    "agents>=1.4.0",
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "pydantic>=2.12.3",
    "streamlit>=1.51.0",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
